test/Fail/Issue2450.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  _20 true _ = g (Y _ y) : A (blocked on _20)

Issue2450.agda:14.7-20.15: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue2450.agda:14.7-8
  Issue2450.agda:20.11-15
